compiler/tests/success/test_getrandom.jazz
export fn foo1() -> reg u64 {
   reg u64 res;    
   stack u64[1] r;
   reg ptr u64[1] p;
   p = r;
   p = #getrandom(p);
   r = p;
   res = r[0];  
   return res;
}

export fn foo2() -> reg u64 {
   reg u64 res;    
   stack u64[1] r;
   reg ptr u64[1] p;
   p = r;
   p = #getrandom(p);
   res = p[u64 0];  
   return res;
} 

export fn foo3() -> reg u64 {
   reg u64 res;    
   stack u64[1] r;
   r = #getrandom(r);
   res = r[0];  
   return res;
}